vlib/v/checker/tests/no_fn_main.v
fn no_main() {
	println('Hello world !')
}
